--- a/code/notebooks/notebook_template.ipynb
+++ b/code/notebooks/notebook_template.ipynb
@@ -68,7 +68,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# code to read csv file "
+    "# code to read csv file into data frame \n",
+    "df = pd.read_csv('yourfile.csv') "
    ]
   },
   {
@@ -78,7 +79,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# code to create csv file "
+    "# code to create csv file \n",
+    "df.to_csv('output.csv') "
    ]
   }
  ],
